tests/machine/x/go/group_by_multi_join_sort.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_by_multi_join_sort.go:119:15: cannot use _ as value or type
../../../tests/machine/x/go/group_by_multi_join_sort.go:208:14: cannot use _sum(func() []any {…}()) (value of type float64) as int value in struct literal

1: //go:build ignore
